# nrf52832_bl_app_ble_ota

./: .gitignore  CMakeLists.txt  nrf52832_bl_app_ble_ota.code-workspace  start_codex.sh  start_kimi.sh
.agents/skills/nrf52-ota-debug/: SKILL.md
.agents/skills/nrf52-ota-debug/scripts/: run.sh
.github/workflows/: build.yml
bl/: CMakeLists.txt  dfu_public_key.c  main.c
cmake/: arm-gcc-toolchain.cmake  nrf_defaults.cmake
components/elog_port/: elog_port.c  elog_port.h
components/nrf_log_wrapper/: nrf_log.h  nrf_log_backend_interface.h  nrf_log_ctrl.h  nrf_log_default_backends.h  nrf_log_instance.h  nrf_log_internal.h  nrf_log_str_formatter.h
config/app/: FreeRTOSConfig.h  app_gcc_nrf52.ld  sdk_config.h
config/bl/: elog_cfg.h  sdk_config.h  secure_bootloader_gcc_nrf52.ld
documents/: flash_ram_layout.md
src/: board_pins.h  elog_port.c  main.c
src/patch/: nrf_sdh_freertos.c
tools/: .nrfutil  README.md
